--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a nice tool to make skeleton screen",
   "main": "src",
   "bin": {
-    "dps": "bin/dps-cli.js"
+    "dps1": "bin/dps-cli.js"
   },
   "repository": {
     "type": "git",
